setting the client

--- a/client/ionic.config.json
+++ b/client/ionic.config.json
@@ -1,5 +1,7 @@
 {
-  "name": "client",
-  "integrations": {},
+  "name": "client1",
+  "integrations": {
+    "capacitor": {}
+  },
   "type": "angular"
 }
