--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,5 +1,16 @@
 asgiref==3.7.2
+build==1.0.3
+click==8.1.7
+colorama==0.4.6
 Django==5.0.2
+django-filter==23.5
+djangorestframework==3.14.0
+Markdown==3.5.2
 mysqlclient==2.2.4
+packaging==23.2
+pip-autoremove==0.10.0
+pip-tools==7.4.0
+pyproject_hooks==1.0.0
+pytz==2024.1
 sqlparse==0.4.4
 tzdata==2024.1
