--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -17,8 +17,11 @@ cryptography==42.0.5
 defusedxml==0.7.1
 Django==5.0.2
 django-allauth==0.61.1
+django-appconf==1.0.6
 django-ckeditor==6.7.1
+django-cors-headers==4.3.1
 django-filter==23.5
+django-imagekit==5.0.0
 django-js-asset==2.2.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
@@ -49,6 +52,7 @@ oauthlib==3.2.2
 overrides==7.7.0
 packaging==23.2
 pandocfilters==1.5.1
+pilkit==3.0
 pillow==10.2.0
 pip-autoremove==0.10.0
 pip-tools==7.4.0
